--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "flowbite": "^1.4.1",
     "react": "^18.0.0",
     "react-animated-slider": "^2.0.0",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^4.3.1",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
