--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.2.1",
     "axios": "^0.26.1",
     "flowbite": "^1.4.1",
+    "framer-motion": "^6.2.9",
     "react": "^18.0.0",
     "react-animated-slider": "^2.0.0",
     "react-datepicker": "^4.7.0",
